<!--

    ChestSort
    Copyright © 2021 gmasil.de

    This file is part of ChestSort.

    ChestSort is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    ChestSort is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with ChestSort. If not, see <https://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.headshotharp.spigot</groupId>
    <artifactId>chestsort</artifactId>
    <version>1.19.3-SNAPSHOT</version>
    <name>ChestSort</name>

    <inceptionYear>2021</inceptionYear>
    <url>https://github.com/gmasil/ChestSort</url>

    <organization>
        <name>Gmasil</name>
        <url>https://gmasil.de</url>
    </organization>

    <licenses>
        <license>
            <name>GNU General Public License v3 (GPLv3)</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- versions -->
        <papermc.version>1.19.3-R0.1-SNAPSHOT</papermc.version>
        <plugin-base.version>1.19.3-1.2</plugin-base.version>
        <plugin-hibernate.version>1.19.2-1.4</plugin-hibernate.version>
        <jackson.version>2.14.1</jackson.version>
        <commons-io.version>2.8.0</commons-io.version>
        <reflections.version>0.10.2</reflections.version>
        <lombok.version>1.18.24</lombok.version>
        <!-- plugin versions -->
        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
        <jacoco-plugin.version>0.8.8</jacoco-plugin.version>
        <license-plugin.version>4.1</license-plugin.version>
        <assembly-plugin.version>3.4.2</assembly-plugin.version>
        <!-- test versions -->
        <junit-jupiter.version>5.9.2</junit-jupiter.version>
        <junit-platform.version>1.7.1</junit-platform.version>
        <gherkin-extension.version>1.4</gherkin-extension.version>
        <hamcrest.version>1.3</hamcrest.version>
        <mockito.version>5.0.0</mockito.version>
        <!-- sonar -->
        <sonar.coverage.exclusions>**/dao/**/*.java</sonar.coverage.exclusions>
        <sonar.cpd.exclusions>**/*DAO.java,**/*Command.java</sonar.cpd.exclusions>
    </properties>

    <dependencies>
        <!-- spigot -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${papermc.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- preprocessor -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- base -->
        <dependency>
            <groupId>de.headshotharp.minecraft</groupId>
            <artifactId>plugin-base</artifactId>
            <version>${plugin-base.version}</version>
        </dependency>
        <dependency>
            <groupId>de.headshotharp.minecraft</groupId>
            <artifactId>plugin-hibernate</artifactId>
            <version>${plugin-hibernate.version}</version>
        </dependency>
        <!-- jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- other -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflections.version}</version>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- gherkin -->
        <dependency>
            <groupId>de.gmasil</groupId>
            <artifactId>gherkin-extension-jupiter</artifactId>
            <version>${gherkin-extension.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- hamcrest -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- surefire -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <!-- jacoco -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-plugin.version}</version>
                <executions>
                    <!-- unit tests -->
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- assembly -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${assembly-plugin.version}</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${project.name}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- license -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-plugin.version}</version>
                <configuration>
                    <header>${project.basedir}/license/templates/gnu_gpl_v3.txt</header>
                    <properties>
                        <owner>gmasil.de</owner>
                    </properties>
                    <includes>
                        <include>src/main/java/**</include>
                        <include>src/main/resources/**</include>
                        <include>src/test/java/**</include>
                        <include>src/test/resources/**</include>
                        <include>pom.xml</include>
                    </includes>
                    <excludes>
                        <exclude>**/LICENSE.txt</exclude>
                        <exclude>**/org.mockito.plugins.MockMaker</exclude>
                    </excludes>
                    <mapping>
                        <java>JAVADOC_STYLE</java>
                    </mapping>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>GMasil Nexus</id>
            <url>https://nexus.gmasil.de/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>nexus</id>
            <url>https://nexus.gmasil.de/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>nexus</id>
            <url>https://nexus.gmasil.de/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>
